Fixed Text Spill Over in Jumbo

--- a/main.css
+++ b/main.css
@@ -129,3 +129,10 @@ footer li img {
 .card{
   padding: 5px;
 }
+
+@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : portrait) 
+{ 
+  #openingPanel {
+      font-size: 45px;
+  }
+}
